community/lists/devel/att-18272/attachment
<html><head><meta http-equiv="Content-Type" content="text/html charset=utf-8"></head><body style="word-wrap: break-word; -webkit-nbsp-mode: space; -webkit-line-break: after-white-space;" class="">Looks like you’re just missing a required header that Cray has in a different place - master builds fine on my box<div class=""><br class=""><div><blockquote type="cite" class=""><div class="">On Oct 27, 2015, at 5:07 AM, Howard Pritchard &lt;<a href="mailto:hppritcha@gmail.com" class="">hppritcha@gmail.com</a>&gt; wrote:</div><br class="Apple-interchange-newline"><div class=""><div dir="ltr" class="">Hi Folks,<div class=""><br class=""></div><div class="">Looks like master can't build any more, at least not on cray with --enable-picky option:</div><div class=""><br class=""></div><div class=""><pre style="" class="">-- make all -j 8 result_stderr ---
keyval_lex.c: In function 'yy_get_next_buffer':
keyval_lex.c:751:18: warning: comparison between signed and unsigned integer expressions
[-Wsign-compare]
   for ( n = 0; n &lt; max_size &amp;&amp; \
                  ^
keyval_lex.c:1284:3: note: in expansion of macro 'YY_INPUT'
   YY_INPUT( (&amp;YY_CURRENT_BUFFER_LVALUE-&gt;yy_ch_buf[number_to_move]),
show_help_lex.c: In function 'yy_get_next_buffer':
show_help_lex.c:647:18: warning: comparison between signed and unsigned integer expressions
[-Wsign-compare]
   for ( n = 0; n &lt; max_size &amp;&amp; \
                  ^
show_help_lex.c:1081:3: note: in expansion of macro 'YY_INPUT'
   YY_INPUT( (&amp;YY_CURRENT_BUFFER_LVALUE-&gt;yy_ch_buf[number_to_move]),
common_verbs_usnic_fake.c: In function 'fake_driver_init':
common_verbs_usnic_fake.c:92:9: error: implicit declaration of function 'sscanf'
[-Werror=implicit-function-declaration]
     if (sscanf(value, "%i", &amp;vendor) != 1) {
common_verbs_usnic_fake.c:92:9: warning: incompatible implicit declaration of built-in function
'sscanf'
cc1: some warnings being treated as errors
make[2]: *** [libmca_common_verbs_usnic_la-common_verbs_usnic_fake.lo] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1</pre><pre style="" class=""><br class=""></pre><pre style="" class="">Howard</pre><pre style="" class=""><br class=""></pre></div></div>
_______________________________________________<br class="">devel mailing list<br class=""><a href="mailto:devel@open-mpi.org" class="">devel@open-mpi.org</a><br class="">Subscription: http://www.open-mpi.org/mailman/listinfo.cgi/devel<br class="">Link to this post: http://www.open-mpi.org/community/lists/devel/2015/10/18269.php</div></blockquote></div><br class=""></div></body></html>
